--- a/bai8.html
+++ b/bai8.html
@@ -12,6 +12,10 @@
             alert("tháng không hợp lệ");
         }else if(1<=month &&month<=3){
             alert("mùa xuân");
+        }if(4<=month &&month<=6){
+            alert("mùa ha");
+        }else if(7<=month &&month<=9){
+            alert("mùa thu");
         }if(10<=month &&month<=12){
             alert("mùa đông");
         }
